解决图片问题

--- a/计算机网络：.md
+++ b/计算机网络：.md
@@ -293,7 +293,7 @@
 
 - **例题：要发送的数据为1101011011，采用CRC的生成多项式是P（x）=x^4+x+1.求余数。**
 
-![image-20211209215116866](C:/Users/16337/AppData/Roaming/Typora/typora-user-images/image-20211209215116866.png)
+![image-20211213174322470](https://gitee.com/hzg-sss/typora-picture/raw/master/img/image-20211213174322470.png)
 
 ## 四.网络层
 
