解决图片问题

--- a/计算机网络：.md
+++ b/计算机网络：.md
@@ -195,6 +195,8 @@
   - 数据
   - 帧尾：校验
 
+![img](https://gitee.com/hzg-sss/typora-picture/raw/master/img/2ccb4d410997da49603a8bf868d318e2.png)
+
 ##### 1.3以太网数据帧中的MAC和LLC
 
 - MAC（一种协议，对接物理层）
